Simplifies tox file

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38, py37, py36, style, coverage, docstyle, docs
+envlist = py38, style, coverage
 
 
 [testenv]
@@ -8,7 +8,6 @@ deps =
     ipdb
     pytest
     scipy
-    textdistance
 commands =
     pytest tests/ {posargs}
 
@@ -25,27 +24,7 @@ commands =
 deps =
     coverage
     pytest-cov
-    textdistance
 commands =
     - coverage erase
     pytest -q tests/ --cov=apode/ --cov-append --cov-report=
     coverage report --fail-under=80 -m
-
-
-[testenv:docstyle]
-deps = pydocstyle
-commands =
-    pydocstyle apode --convention=numpy
-
-
-[testenv:docs]
-description = "Invoke sphinx-build to build th HTML docs"
-whitelist_externals =
-    make
-usedevelop = True
-skip_install = False
-changedir = docs
-deps =
-    -r {toxinidir}/docs/requirements.txt
-commands =
-    sphinx-build -W -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
