Modifications to tox file to  fix commands errors on its execution. Adds license to conftest. Style check to setup

--- a/tox.ini
+++ b/tox.ini
@@ -2,14 +2,13 @@
 [tox]
 envlist = py38, style, coverage
 
-
 [testenv]
 deps =
     ipdb
     pytest
     scipy
 commands =
-    pytest tests/ {posargs}
+    - pytest tests/ {posargs}
 
 
 [testenv:style]
@@ -17,7 +16,7 @@ skip_install = True
 usedevelop = False
 deps = flake8
 commands =
-    flake8 setup.py ./apode ./test_apode --ignore=E402 {posargs}
+    - flake8 setup.py ./apode/tests --ignore=E402 {posargs}
 
 
 [testenv:coverage]
@@ -26,5 +25,5 @@ deps =
     pytest-cov
 commands =
     - coverage erase
-    pytest -q tests/ --cov=apode/ --cov-append --cov-report=
-    coverage report --fail-under=80 -m
+    - pytest -q tests/ --cov=apode --cov-append --cov-report=
+    - coverage report --fail-under=80 -m
