Update tox file

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,12 @@ deps =
     coverage
     pytest-cov
 commands =
-    - coverage erase
-    - pytest -q tests/ --cov=apode --cov-append --cov-report=
-    - coverage report --fail-under=80 -m
+    coverage erase
+    pytest -q tests/ --cov=apode --cov-append --cov-report=
+    coverage report --fail-under=80 -m
+    coverage html
+
+[testenv:docstyle]
+deps = pydocstyle
+commands =
+    pydocstyle apode --convention=numpy
