--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ wheels/
 *.egg
 MANIFEST
 
+# Desarrollo local
+desarrollo/
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
