Adds check-manifest env to tox and travis. Fixes #28

--- a/tox.ini
+++ b/tox.ini
@@ -33,3 +33,10 @@ commands =
 deps = pydocstyle
 commands =
     pydocstyle apode --convention=numpy
+
+[testenv:check-manifest]
+skip_install = True
+usedevelop = False
+deps = check-manifest
+commands =
+    check-manifest
