--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,16 @@ install:
   - pip install tox
 
 # command to run tests
-script: 
+script:
   - pytest
 
 matrix:
   include:
     - python: 3.8
-      env: TOXENV=docstyle
-      dist: xenial
-      sudo: true
+        env: TOXENV=docstyle
+        dist: xenial
+        sudo: true
+    - python: 3.8
+        env: TOXENV=check-manifest
+        dist: xenial
+        sudo: true
