--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38, style, coverage
+envlist = py38, style, coverage, check-manifest, docstyle, makedocs
 
 [testenv]
 deps =
@@ -8,15 +8,17 @@ deps =
     pytest
     scipy
 commands =
-    - pytest tests/ {posargs}
+    pytest tests/ {posargs}
 
 
 [testenv:style]
 skip_install = True
 usedevelop = False
 deps = flake8
+       flake8-import-order
+       flake8-black
 commands =
-    - flake8 setup.py ./apode/tests --ignore=E402 {posargs}
+    flake8 setup.py tests/ apode/ {posargs}
 
 
 [testenv:coverage]
@@ -24,15 +26,16 @@ deps =
     coverage
     pytest-cov
 commands =
-    coverage erase
-    pytest -q tests/ --cov=apode --cov-append --cov-report=
+    - coverage erase
+    - pytest -q tests/ --cov=apode --cov-append --cov-report=
     coverage report --fail-under=80 -m
-    coverage html
+
 
 [testenv:docstyle]
 deps = pydocstyle
 commands =
     pydocstyle apode --convention=numpy
+
 
 [testenv:check-manifest]
 skip_install = True
@@ -40,3 +43,13 @@ usedevelop = False
 deps = check-manifest
 commands =
     check-manifest
+
+
+[testenv:makedocs]
+usedevelop = True
+skip_install = False
+changedir = docs
+deps =
+    -r {toxinidir}/docs/requirements.txt
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
