--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38, style, coverage, check-manifest, docstyle, makedocs
+envlist =  check-manifest, docstyle, makedocs, style, py38, coverage
 
 [testenv]
 deps =
