--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,41 @@
 language: python
+sudo: true
 
-python:
-  - "3.8"
+before_install:
+  - sudo wget https://github.com/jgm/pandoc/releases/download/2.7.3/pandoc-2.7.3-1-amd64.deb
+  - sudo dpkg -i pandoc-2.7.3-1-amd64.deb
+  - pandoc --version
 
-# command to install dependencies
 install:
-  - pip install tox
+    - pip install tox
 
-# command to run tests
 script:
-  - pytest
+    - tox -r
+
 
 matrix:
   include:
-    - python: 3.8
-        env: TOXENV=docstyle
-        dist: xenial
+
+      - env: TOXENV=docstyle
+        python: 3.8
         sudo: true
-    - python: 3.8
-        env: TOXENV=check-manifest
-        dist: xenial
+
+      - env: TOXENV=check-manifest
+        python: 3.8
+        sudo: true
+
+      - env: TOXENV=makedocs
+        python: 3.8
+        sudo: true
+
+      - env: TOXENV=style
+        python: 3.8
+        sudo: true
+
+      - env: TOXENV=coverage
+        python: 3.8
+        sudo: true
+
+      - env: TOXENV=py38
+        python: 3.8
         sudo: true
