--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,8 @@ include README.md
 
 recursive-exclude tests *
 recursive-exclude docs *
+recursive-exclude draft *
 
 exclude tox.ini
 exclude pyproject.toml
+exclude .readthedocs.yml
