Adds jinja2 to the list of dependencies to be installed.

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =  check-manifest, docstyle, makedocs, style, py38, coverage
 deps =
     ipdb
     pytest
+    jinja2
     scipy
 commands =
     pytest tests/ {posargs}
